# dagster-instance

./: .env  .gitignore  dagster.yaml  docker-compose.yml  docker.yaml  docker.yml  dockercompose.yml  dockerfile  pyproject.toml  workspace.yml
.devcontainer/: devcontainer.json
pipeline_personal_finance/: .env  __init__.py  assets.py  dockerfile  pyproject.toml  requirements.txt  resources.py
