[tool.poetry]
name = "pipeline-personal-finance"
version = "0.1.0"
description = ""
authors = ["Phil Patterson <philip.james.patterson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
quiffen = "^2.0.11"
pandas = ">=1.5.1,<2.0.0"
dagster = "^1.7.10"
dagster-postgres = "^0.23.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
